Work in progress on ticket #22.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@340 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/tips/1.xhtml
+++ b/lilith/src/main/resources/tips/1.xhtml
@@ -9,8 +9,8 @@
 </head>
 <body>
 <p>
-	1 - You can save the current filter using &#8963; I.<br/>
-	See <a href="help://conditions.xhtml">help</a> for more info...
+	You can write your own custom filters in <a href="http://groovy.codehaus.org/">Groovy</a>.<br/>
+	See <a href="help://conditions.xhtml#groovy">help</a> for more info...
 </p>
 </body>
 </html>
