--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -12,7 +12,7 @@
 
 <h1><a name="top">Keyboard</a></h1>
 
-<p>&#8963; represents the system dependent command key, e.g. "Ctrl" on Windows and
+<p>^ represents the system dependent command key, e.g. "Ctrl" on Windows and
 	"cmd &#8984;" on Mac</p>
 
 <p>&#8679; represents "Shift".</p>
@@ -22,15 +22,15 @@
 <h2>General</h2>
 
 <dl>
-	<dt>&#8963;&#8679; O</dt>
+	<dt>^&#8679; O</dt>
 	<dd>Open inactive log...</dd>
 </dl>
 <dl>
-	<dt>&#8963;&#8679; X</dt>
+	<dt>^&#8679; X</dt>
 	<dd>Remove all inactive logs</dd>
 </dl>
 <dl>
-	<dt>&#8963; Q</dt>
+	<dt>^ Q</dt>
 	<dd>Exit. Quit. No, I won't ask you for permission.</dd>
 </dl>
 
@@ -38,25 +38,25 @@
 <h2>View related</h2>
 
 <dl>
-	<dt>&#8963; 1</dt>
+	<dt>^ 1</dt>
 	<dd>Opens the global logging view.</dd>
 
-	<dt>&#8963; 2</dt>
+	<dt>^ 2</dt>
 	<dd>Opens the global access view.</dd>
 
-	<dt>&#8963; 0</dt>
+	<dt>^ 0</dt>
 	<dd>Opens the internal Lilith logging view.</dd>
 
-	<dt>&#8963; R</dt>
+	<dt>^ R</dt>
 	<dd>Remove inactive views.</dd>
 <!--
-	 <dt>&#8963;-&#8679;-R</dt>
+	 <dt>^-&#8679;-R</dt>
 	 <dd>Clear and remove inactive views.</dd>
 -->
-	<dt>&#8963; T</dt>
+	<dt>^ T</dt>
 	<dd>Toggles tailing ("scroll to bottom"-funtionality).</dd>
 
-	<dt>&#8963; P</dt>
+	<dt>^ P</dt>
 	<dd>Pause/Unpause view.<br/>
 		If the view is paused, events are still received in the background,
 		i.e. no events are lost while the view is paused.
@@ -67,48 +67,48 @@
 	<dd>Clear view.</dd>
 -->
 
-	<dt>&#8963;&#8679; A</dt>
+	<dt>^&#8679; A</dt>
 	<dd>Attach/detach view.</dd>
 
-	<dt>&#8963;&#8679; D</dt>
+	<dt>^&#8679; D</dt>
 	<dd>Disconnect - terminates the connection.</dd>
 
-	<dt>&#8963; M</dt>
+	<dt>^ M</dt>
 	<dd>Focus message.</dd>
 
-	<dt>&#8963; E</dt>
+	<dt>^ E</dt>
 	<dd>Focus events.</dd>
 
-	<dt>&#8963; B</dt>
+	<dt>^ B</dt>
 	<dd>Edit source name of the current view.</dd>
 
-	<dt>&#8963; I</dt>
+	<dt>^ I</dt>
 	<dd>Add the current filter.</dd>
 
-	<dt>&#8963; . (also &#8963; [mouse wheel up])</dt>
+	<dt>^ . (also ^ [mouse wheel up])</dt>
 	<dd>Zoom in</dd>
 
-	<dt>&#8963;&#8679; . (also &#8963; [mouse wheel down])</dt>
+	<dt>^&#8679; . (also ^ [mouse wheel down])</dt>
 	<dd>Zoom out</dd>
 </dl>
 
 <h2>Tab related</h2>
 
 <dl>
-	<dt>&#8963; W</dt>
+	<dt>^ W</dt>
 	<dd>Close the current tab.<br/>
 		The unfiltered tab is not closeable.
 	</dd>
 
-	<dt>&#8963;&#8679; W</dt>
+	<dt>^&#8679; W</dt>
 	<dd>Close all but the current tab.<br/>
 		The unfiltered tab is not closeable.
 	</dd>
 
-	<dt>&#8963; J</dt>
+	<dt>^ J</dt>
 	<dd>Select previous tab.</dd>
 
-	<dt>&#8963; K</dt>
+	<dt>^ K</dt>
 	<dd>Select next tab.</dd>
 </dl>
 
@@ -116,13 +116,13 @@
 <h2>Find related</h2>
 
 <dl>
-	<dt>&#8963; F</dt>
+	<dt>^ F</dt>
 	<dd>Show find panel and focus find textfield.</dd>
 
-	<dt>&#8963; G</dt>
+	<dt>^ G</dt>
 	<dd>Find previous match.</dd>
 
-	<dt>&#8963;&#8679; G</dt>
+	<dt>^&#8679; G</dt>
 	<dd>Find next match.</dd>
 
 <!--
