--- a/lilith/src/main/resources/tips/0.xhtml
+++ b/lilith/src/main/resources/tips/0.xhtml
@@ -9,8 +9,8 @@
 </head>
 <body>
 <p>
-	0 - You can save the current filter using &#8963; I.<br/>
-	See <a href="help://conditions.xhtml">help</a> for more info...
+	You can save the current filter using ^ I.<br/>
+	See <a href="help://conditions.xhtml#saved">help</a> for more info...
 </p>
 </body>
 </html>
