--- a/lilith/src/main/resources/tips/2.xhtml
+++ b/lilith/src/main/resources/tips/2.xhtml
@@ -9,8 +9,8 @@
 </head>
 <body>
 <p>
-	2 - You can save the current filter using &#8963; I.<br/>
-	See <a href="help://conditions.xhtml">help</a> for more info...
+	You can name a source using ^ B.<br/>
+	See <a href="help://sources.xhtml#sourceNames">help</a> for more info...
 </p>
 </body>
 </html>
