Fixes tickets #22 and #68. Added native Level condition. Enhanced help.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@352 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/detailsView.xhtml
+++ b/lilith/src/main/resources/help/detailsView.xhtml
@@ -24,6 +24,9 @@
 
 <p>See <a href="http://groovy.codehaus.org/">http://groovy.codehaus.org/</a> for help on Groovy.</p>
 
+<p>You can reinitialize the details view in the <a href="prefs://Troubleshooting">Troubleshooting preferences</a>.</p>
+<p>Additionally, certain details view options are available in <a href="prefs://General">General preferences</a>.</p>
+
 <p><a href="#top">Back to top.</a></p>
 </body>
 </html>
