--- a/lilith/src/main/resources/help/sources.xhtml
+++ b/lilith/src/main/resources/help/sources.xhtml
@@ -14,7 +14,7 @@
 
 <h2><a name="sources">Sources</a></h2>
 
-<p>Sources are the origin of events that are recived by Lilith. The typical source identifier is the IP address
+<p>Sources are the origin of events that are received by Lilith. The typical source identifier is the IP address
 	of the machine sending the event. This would be "127.0.0.1" in case of your own computer.</p>
 
 <p><a href="#top">Back to top.</a></p>
@@ -36,6 +36,9 @@
 		events from that sources.
 	</li>
 </ul>
+<p>
+	Named sources can be configured in <a href="prefs://Sources">Sources preferences</a>.
+</p>
 
 <p><a href="#top">Back to top.</a></p>
 
@@ -53,6 +56,11 @@
 
 <p>You could, for example, create a source list that contains only "127.0.0.1" and white-list on that source list
 	to receive only events originating from your own computer.</p>
+
+<p>
+	Source lists can be configured in <a href="prefs://SourceLists">Source Lists preferences</a> while black- and
+	whitelisting can be configured in <a href="prefs://SourceFiltering">Source Filtering preferences</a>.
+</p>
 
 <p><a href="#top">Back to top.</a></p>
 
