--- a/lilith/src/main/resources/tips/0.xhtml
+++ b/lilith/src/main/resources/tips/0.xhtml
@@ -4,12 +4,15 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>1</title>
+	<title>0</title>
 	<link href="tips.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <p>
-	You can save the current filter using ^ I.<br/>
+	You can save the current condition using ^&nbsp;I.<br/>
+	Saved conditions can be configured in the <a href="prefs://Conditions">Conditions preferences</a>.
+</p>
+<p>
 	See <a href="help://conditions.xhtml#saved">help</a> for more info...
 </p>
 </body>
