--- a/lilith/src/main/resources/tips/1.xhtml
+++ b/lilith/src/main/resources/tips/1.xhtml
@@ -9,7 +9,9 @@
 </head>
 <body>
 <p>
-	You can write your own custom filters in <a href="http://groovy.codehaus.org/">Groovy</a>.<br/>
+	You can write your own custom filters in <a href="http://groovy.codehaus.org/">Groovy</a>.
+</p>
+<p>
 	See <a href="help://conditions.xhtml#groovy">help</a> for more info...
 </p>
 </body>
