--- a/lilith/src/main/resources/tips/2.xhtml
+++ b/lilith/src/main/resources/tips/2.xhtml
@@ -4,12 +4,15 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>1</title>
+	<title>2</title>
 	<link href="tips.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <p>
-	You can name a source using ^ B.<br/>
+	You can name a source using ^&nbsp;B.<br/>
+	Named sources can be configured in <a href="prefs://Sources">Sources preferences</a>.
+</p>
+<p>
 	See <a href="help://sources.xhtml#sourceNames">help</a> for more info...
 </p>
 </body>
