Changed repositories to use huxhorn.de webspace since sf.net isn't stable enough. Using rsync to sync over to sf.net.
git-svn-id: https://lilith.svn.sourceforge.net/svnroot/lilith/trunk@357 4afeb0b7-f550-0410-824e-ec7672375c7e

--- a/lilith/src/main/resources/help/knownProblems.xhtml
+++ b/lilith/src/main/resources/help/knownProblems.xhtml
@@ -14,17 +14,17 @@
 
 <ul>
 	<li>Preferences dialog is obviously not finished right now :)</li>
+	<li>If both "Check for update" and "Tip of the Day" dialog are displayed, the shortcuts
+	of the main frmae won't work immediately. This is very strange. Any tips or ideas?<br/>
+	See <a href="http://sourceforge.net/apps/trac/lilith/ticket/72">issue #72</a>.</li>
 	<li>The 'Send to' functionality isn't working as expected if the network infrastructure changes.
 		It should work but doesn't. I think it's a JmDNS problem but I have to investigate further.
 	</li>
 	<li>The 'Edit groovy!' functionality is currently broken. Just don't use it.
 		See <a href="http://jira.codehaus.org/browse/GROOVY-2790">GROOVY-2790</a> for more information.
 	</li>
-	<li>Copy to clipboard does not work in details view.
-		This is a limitation of Flying Saucer that's used as XHTML renderer. This problem seems to be fixed in
-		the next version of Flying Saucer but it hasn't been released yet.<br/>
-		See <a href="https://xhtmlrenderer.dev.java.net/issues/show_bug.cgi?id=172">bug #172</a>.<br/>
-		In the meantime, you can copy parts or all of the event using the context menu.
+	<li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
+		This is a limitation of Flying Saucer that's used as the XHTML renderer.
 	</li>
 	<li>'Copy event' was meant to copy the event as HTML but this is severely broken in Java.<br/>
 		There's no workaround available but this will *probably* be fixed in JDK7.
