--- a/lilith/src/main/resources/help/knownProblems.xhtml
+++ b/lilith/src/main/resources/help/knownProblems.xhtml
@@ -15,7 +15,7 @@
 <ul>
 	<li>Preferences dialog is obviously not finished right now :)</li>
 	<li>If both "Check for update" and "Tip of the Day" dialog are displayed, the shortcuts
-	of the main frmae won't work immediately. This is very strange. Any tips or ideas?<br/>
+	of the main frame won't work immediately. This is very strange. Any tips or ideas?<br/>
 	See <a href="http://sourceforge.net/apps/trac/lilith/ticket/72">issue #72</a>.</li>
 	<li>The 'Send to' functionality isn't working as expected if the network infrastructure changes.
 		It should work but doesn't. I think it's a JmDNS problem but I have to investigate further.
