--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -76,6 +76,11 @@
 	</tr>
 
 	<tr>
+		<td><a href="http://www.sauronsoftware.it/projects/junique/">JUnique</a></td>
+		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
+	</tr>
+
+	<tr>
 		<td><a href="http://groovy.codehaus.org/">Groovy</a></td>
 		<td><a href="http://svn.groovy.codehaus.org/browse/~raw,r=6114/groovy/trunk/groovy/groovy-core/LICENSE.txt">The
 			Apache Software License Version, Version 2.0</a></td>
