--- a/lilith/src/main/resources/help/knownProblems.xhtml
+++ b/lilith/src/main/resources/help/knownProblems.xhtml
@@ -13,23 +13,30 @@
 <h1><a name="top">Known Problems</a></h1>
 
 <ul>
+    <li>Mac OS X 10.5 + 10.6:
+    <br/>Shortcuts/Accelerators are not working if both the "Tip of the Day" and "Check for update" dialogs show after startup.
+    <br/>This seems to be a bug in the Java implementation from Apple.
+    <br/>See <a href="http://sourceforge.net/apps/trac/lilith/ticket/72">Ticket 72</a>.
+    </li>
+
+    <li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
+        This is a limitation of Flying Saucer that's used as the XHTML renderer.
+    </li>
+
+    <li>'Copy event' was meant to copy the event as HTML but this is severely broken in Java.<br/>
+        There's no workaround available but this will *probably* be fixed in JDK7.
+        So for now, 'Copy event' copies the XHTML code as text...<br/>
+        See <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6392086">bug #6392086</a>.
+    </li>
+
 	<li>Preferences dialog is obviously not finished right now :)</li>
-	<li>If both "Check for update" and "Tip of the Day" dialog are displayed, the shortcuts
-	of the main frame won't work immediately. This is very strange. Any tips or ideas?<br/>
-	See <a href="http://sourceforge.net/apps/trac/lilith/ticket/72">issue #72</a>.</li>
+
 	<li>The 'Send to' functionality isn't working as expected if the network infrastructure changes.
 		It should work but doesn't. I think it's a JmDNS problem but I have to investigate further.
 	</li>
+
 	<li>The 'Edit groovy!' functionality is currently broken. Just don't use it.
 		See <a href="http://jira.codehaus.org/browse/GROOVY-2790">GROOVY-2790</a> for more information.
-	</li>
-	<li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
-		This is a limitation of Flying Saucer that's used as the XHTML renderer.
-	</li>
-	<li>'Copy event' was meant to copy the event as HTML but this is severely broken in Java.<br/>
-		There's no workaround available but this will *probably* be fixed in JDK7.
-		So for now, 'Copy event' copies the XHTML code as text...<br/>
-		See <a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6392086">bug #6392086</a>.
 	</li>
 </ul>
 <p><a href="#top">Back to top.</a></p>
