Updated release notes. Changed location.

--- a/releases/0.9.36.xhtml
+++ b/releases/0.9.36.xhtml
@@ -10,9 +10,10 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	<body>
 		<h1>Lilith 0.9.36</h1>
 
+		<div>
 		<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/0.9.36">Download Now!
 		<br />(Released: 2009-07-20)</a>
-
+		</div>
 		
 		<h2>Changes</h2>
 		<ul>
@@ -92,9 +93,6 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/39">Ticket 39</a>)			
 			</li>
 		</ul>
-		<p>
-		<a href="http://lilith.huxhorn.de/changes-0.9.37.xhtml">Changes of 0.9.37</a>
-		</p>
 	</body>
 </html>
 
