--- a/releases/0.9.37.xhtml
+++ b/releases/0.9.37.xhtml
@@ -10,12 +10,19 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 	<body>
 		<h1>Lilith 0.9.37</h1>
 
+		<div>
 		<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/0.9.37">Download Now!
 		<br />(Released: 2009-11-xx)</a>
-
+		</div>
 		
 		<h2>Changes</h2>
 		<ul>
+			<li>
+			Change of active Conditions was not repainting views. This was only the case in internal betas.
+			<br/>This was reported by Alfred.
+			<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/75">Ticket 75</a>)			
+			</li>
+			
 			<li>
 			Removed additivity from the debug loggers. Debug logger events won't show up in the
 			Lilith log or the console.
@@ -211,7 +218,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 		
 		<h2>Previous Versions</h2>
 		<ul>
-			<li><a href="http://lilith.huxhorn.de/changes-0.9.36.xhtml">0.9.36</a></li>
+			<li><a href="http://lilith.huxhorn.de/releases/0.9.36.xhtml">0.9.36</a></li>
 		</ul>
 
 	</body>
