--- a/releases/0.9.37.xhtml
+++ b/releases/0.9.37.xhtml
@@ -12,7 +12,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 
 		<div>
 		<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/0.9.37">Download Now!
-		<br />(Released: 2009-11-xx)</a>
+		<br />(Released: 2009-11-11)</a>
 		</div>
 		
 		<h2>Changes</h2>
