Added SwingX dependency.

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -96,6 +96,11 @@
 		<td><a href="http://slf4j.org/license.html">SLF4J License - [MIT License]</a></td>
 	</tr>
 
+    <tr>
+        <td><a href="https://swingx.dev.java.net/">SwingX</a></td>
+        <td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
+    </tr>
+
 	<tr>
 		<td><a href="http://javalayer.sourceforge.net/">JLayer</a></td>
 		<td><a href="http://www.gnu.org/licenses/gpl.html">GNU GENERAL PUBLIC LICENSE</a></td>
