--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -22,8 +22,9 @@
 	<li><a href="producers.xhtml">Event producers</a></li>
 	<li>Appender configuration
 		<ul>
-			<li><a href="classic-appender.xhtml">Classic Appender</a></li>
-			<li><a href="access-appender.xhtml">Access Appender</a></li>
+			<li><a href="classic-appender.xhtml">Classic Socket Appenders</a></li>
+			<li><a href="access-appender.xhtml">Access Socket Appenders</a></li>
+			<li><a href="file-appender.xhtml">FileAppender configuration</a></li>
 		</ul>
 	</li>
 	<li><a href="detailsView.xhtml">Customizing details view of event</a></li>
