--- a/lilith/src/main/resources/help/classic-appender.xhtml
+++ b/lilith/src/main/resources/help/classic-appender.xhtml
@@ -4,21 +4,21 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>Using the Lilith Classic Appender</title>
+	<title>Using the Lilith Classic Socket Appender</title>
 	<link href="help.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <p><a href="index.xhtml">ToC</a></p>
 
-<h1><a name="top">Using the Lilith Classic Appender</a></h1>
+<h1><a name="top">Using the Lilith Classic Socket Appender</a></h1>
 
-<p>The Lilith Classic Appender is a replacement for <code>ch.qos.logback.classic.net.SocketAppender</code>.<br/>
+<p>The Lilith Classic Socket Appender is a replacement for <code>ch.qos.logback.classic.net.SocketAppender</code>.<br/>
 	This appender, in contrast to logbacks, supports logger.debug("{} {}", new Object[]{foo, bar, throwable), i.e.
 	if the last given parameter of a log message is a Throwable and it is not used up in the message pattern then it
 	will
 	be used as the Throwable of the LoggingEvent, similar to logger.debug(""+foo+" "+bar, throwable).</p>
 
-<p>While LogBACK's appender is stream-based, i.e. it streams logging events using an <code>ObjectOutputStream</code> the
+<p>While LogBACK's appender is stream-based, i.e. it streams logging events using an <code>ObjectOutputStream</code>, the
 	Lilith appender is message based, i.e. it sends logging events one after the other as single messages.</p>
 
 <p>A message consists of an integer that specifies the number of bytes of the following event, followed by the
