Replaced swingx with Glazed Lists. *sigh*

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -81,6 +81,11 @@
 	</tr>
 
 	<tr>
+		<td><a href="http://publicobject.com/glazedlists/">Glazed Lists</a></td>
+		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
+	</tr>
+
+	<tr>
 		<td><a href="http://groovy.codehaus.org/">Groovy</a></td>
 		<td><a href="http://svn.groovy.codehaus.org/browse/~raw,r=6114/groovy/trunk/groovy/groovy-core/LICENSE.txt">The
 			Apache Software License Version, Version 2.0</a></td>
@@ -96,11 +101,12 @@
 		<td><a href="http://slf4j.org/license.html">SLF4J License - [MIT License]</a></td>
 	</tr>
 
+	<!--
     <tr>
         <td><a href="https://swingx.dev.java.net/">SwingX</a></td>
         <td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
     </tr>
-
+	-->
 	<tr>
 		<td><a href="http://javalayer.sourceforge.net/">JLayer</a></td>
 		<td><a href="http://www.gnu.org/licenses/gpl.html">GNU GENERAL PUBLIC LICENSE</a></td>
