Added F1 as shortcut for Help.

--- a/lilith/src/main/resources/help/keyboard.xhtml
+++ b/lilith/src/main/resources/help/keyboard.xhtml
@@ -22,16 +22,17 @@
 <h2>General</h2>
 
 <dl>
+	<dt>F1</dt>
+	<dd>Show help...</dd>
+
 	<dt>^&#8679; O</dt>
 	<dd>Open inactive log...</dd>
-</dl>
-<dl>
+
 	<dt>^&#8679; X</dt>
 	<dd>Remove all inactive logs</dd>
-</dl>
-<dl>
+
 	<dt>^ Q</dt>
-	<dd>Exit. Quit. No, I won't ask you for permission.</dd>
+	<dd>Exit. Quit. No, I won't ask you for permission. I will ask for permission if you make me do so, though. :p</dd>
 </dl>
 
 
