Replaced Commons-CLI with JCommander.

--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -40,11 +40,13 @@
 		<td><a href="http://excalibur.apache.org/license.html">The Apache Software License Version, Version 2.0</a></td>
 	</tr>
 
+	<!--
 	<tr>
 		<td><a href="http://commons.apache.org/cli/">Commons CLI</a></td>
 		<td><a href="http://commons.apache.org/cli/license.html">The Apache Software License Version, Version 2.0</a>
 		</td>
 	</tr>
+	-->
 
 	<tr>
 		<td><a href="http://hc.apache.org/httpclient-3.x/">Commons HttpClient</a></td>
@@ -67,6 +69,12 @@
 	<tr>
 		<td><a href="https://xhtmlrenderer.dev.java.net/">Flying Saucer / xhtmlrenderer</a></td>
 		<td><a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a></td>
+	</tr>
+
+	<tr>
+		<td><a href="http://beust.com/jcommander/">JCommander</a></td>
+		<td><a href="http://www.apache.org/licenses/LICENSE-2.0.html">The Apache Software License Version, Version 2.0</a>
+		</td>
 	</tr>
 
 	<tr>
