--- a/lilith/src/main/resources/help/used-software.xhtml
+++ b/lilith/src/main/resources/help/used-software.xhtml
@@ -72,6 +72,14 @@
 	</tr>
 
 	<tr>
+		<td><a href="http://jackson.codehaus.org/">Jackson JSON processor</a></td>
+		<td><a href="http://www.apache.org/licenses/LICENSE-2.0.html">The Apache Software License Version, Version 2.0</a><br/>
+			<a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General Public License</a><br/>
+			(you decide, dual-licensed)
+		</td>
+	</tr>
+
+	<tr>
 		<td><a href="http://beust.com/jcommander/">JCommander</a></td>
 		<td><a href="http://www.apache.org/licenses/LICENSE-2.0.html">The Apache Software License Version, Version 2.0</a>
 		</td>
