Support for java.util.logging SocketHandler.
- Moved JulImportCallable into separate jul-xml-import module.
- Implemented jul-xml-receiver.
- Added jul and log4j help.
- Added jul-receiver listening on port 11020.
- Added SocketHandler to jul-sandbox.

--- a/lilith/src/main/resources/help/index.xhtml
+++ b/lilith/src/main/resources/help/index.xhtml
@@ -22,9 +22,15 @@
 	<li><a href="producers.xhtml">Event producers</a></li>
 	<li>Appender configuration
 		<ul>
-			<li><a href="classic-appender.xhtml">Classic Socket Appenders</a></li>
-			<li><a href="access-appender.xhtml">Access Socket Appenders</a></li>
-			<li><a href="file-appender.xhtml">FileAppender configuration</a></li>
+			<li>Logback
+				<ul>
+					<li><a href="classic-appender.xhtml">Classic Socket Appenders</a></li>
+					<li><a href="access-appender.xhtml">Access Socket Appenders</a></li>
+					<li><a href="file-appender.xhtml">FileAppender configuration</a></li>
+				</ul>
+			</li>
+			<li><a href="log4j.xhtml">LOG4J SocketAppender</a></li>
+			<li><a href="jul.xhtml">java.util.logging SocketHandler</a></li>
 		</ul>
 	</li>
 	<li><a href="detailsView.xhtml">Customizing details view of event</a></li>
