Documented latest changes.

--- a/releases/0.9.40.xhtml
+++ b/releases/0.9.40.xhtml
@@ -14,42 +14,66 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 		<a class="download" href="http://sourceforge.net/projects/lilith/files/lilith/0.9.40">Download Now!
 		<br />(Released: 2010-xx-xx)</a>
 		</div>
-		
+
 		<h2>Changes</h2>
 		<ul>
 			<li>
+				Added support for java.util.logging SocketHandler. Lilith is listening on port 11020 for incoming connections.
+				<br/>I'd still recommend to switch to SLF4J/Logback, though!
+				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/35">Ticket 35</a>)
+			</li>
+			<li>
+				Added JSON-Appenders and JSON-Receivers.<br />
+				Lilith is listening for message-based JSON-Events on port 10030 (uncompressed) and 10031 (compressed).<br />
+				Zero-delimited JSON-Events are consumed on port 11010.<br />
+				Check out the <a href="http://sourceforge.net/apps/trac/lilith/wiki/LilithJsonFormat">expected JSON data</a>.
+			</li>
+			<li>
+				Replaced Commons-CLI with JCommander. Very nice replacement.<br />
+				I'd like to take this opportunity to thank <a href="http://twitter.com/cbeust">Cédric Beust</a> for his great (and fast!) support!<br />
+				You should seriously check <a href="http://beust.com/jcommander/">JCommander</a> out if your application is handling command line arguments at all.
+			</li>
+			<li>
+				Added support for Log4j SocketAppender. Lilith is listening on port 4445 for incoming connections.
+				<br/>I'd still recommend to switch to SLF4J/Logback, though!
+				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/32">Ticket 32</a>)
+			</li>
+			<li>
+				Fixed glitch in case of "Find next"/"Find prev" while search is already running. Additional searches are now ignored.
+			</li>
+			<li>
 				Added "Find previous active" (*command* T) and "Find next active" (*command* shift T) functionality
 				to quickly jump to events that match any active condition.
-				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/93">Ticket 93</a>)			
+				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/93">Ticket 93</a>)
 			</li>
-			
+
 			<li>
 				Added "Export" functionality which exports the currently selected view into a Lilith file.
-				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/92">Ticket 92</a>)			
+				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/92">Ticket 92</a>)
 			</li>
-			
+
 			<li>
 				Added default condition name to preferences. It's preselected for every new view.<br />
 				This was suggested by Lothar Cezanne.
 			</li>
-			
+
 			<li>
 				Polling events every 100ms instead of every 2s.<br />
 				This results in less congestion and a much snappier feeling.
 			</li>
-			
+
 			<li>
 				Fixed deployment of site.<br />
 				See <a href="http://sulky.huxhorn.de/projects/">sulky</a> and <a href="http://lilith.huxhorn.de/projects/">lilith</a>.
 			</li>
-			
+
 			<li>
-				Added --export-preferences &lt;file&gt; and --import-preferences &lt;file&gt; 
+				Added --export-preferences &lt;file&gt; and --import-preferences &lt;file&gt;
 				commandline options to be able to export and import all preferences.
 				<br/>This was requested by Gareth Doutch (gdoutch).
-				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/81">Ticket 81</a>)			
+				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/81">Ticket 81</a>)
 			</li>
-			
+
 			<li>
 				Added an additional executable lilith-all.jar containing all dependencies as
 				another download option.
@@ -67,29 +91,41 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			</li>
 
 			<li>
-				Fixed several issue in case of log files that are recreated by
+				Fixed several issues in case of log files that are recreated by
 				&lt;append&gt;false&lt;/append&gt; in FileAppender.
 				<br/>Those were all raised by Jeff Jensen (jeffjensen). Thank you very much!
-				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/84">Ticket 84</a>)			
-				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/88">Ticket 88</a>)			
-				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/90">Ticket 90</a>)			
+				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/84">Ticket 84</a>,
+				<a href="http://sourceforge.net/apps/trac/lilith/ticket/88">Ticket 88</a>,
+				<a href="http://sourceforge.net/apps/trac/lilith/ticket/90">Ticket 90</a>)
 			</li>
 
 			<li>
 				Fixed the regression that the internal Lilith log wouldn't show up in the menu anymore.
-				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/85">Ticket 85</a>)			
+				<br/>(<a href="http://sourceforge.net/apps/trac/lilith/ticket/85">Ticket 85</a>)
 			</li>
-			
+
 			<li>
 				Changed update interval of opened files from 5 seconds to 1 second.
 			</li>
-			
+
+			<li>
+				Spring 3.0.4.RELEASE
+			</li>
+
 			<li>
 				Groovy 1.7.3
 			</li>
+
+			<li>
+				SLF4J 1.6.1
+			</li>
+
+			<li>
+				Logback 0.9.24
+			</li>
 		</ul>
-		
-		
+
+
 		<h2>Known Issues</h2>
 		<ul>
 			<li>Selection in the HTML view is currently somewhat buggy, especially in case of scaled view.
@@ -101,7 +137,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 			</li>
 		</ul>
 
-		
+
 		<h2>Previous Versions</h2>
 		<ul>
 			<li><a href="http://lilith.huxhorn.de/releases/0.9.39.xhtml">0.9.39</a></li>
@@ -112,4 +148,3 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 
 	</body>
 </html>
-
